Updated header to not show email or last name The header now only shows a users first name and avatar in the top right. The alert bell now also sticks to the left hand side of the text, fixing previous overlap issues due to absolute positioning

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -55,12 +55,13 @@
  	height: 50px;
  	cursor: pointer;
 
+ 	.name { line-height: 50px; }
  	#user-avatar
  	{
  		float: right;
  	    position: relative;
  	    height: 100%;
- 	    margin-left: 10px;
+ 	    margin-left: 5px;
  	}
  	#user-avatar img:hover
  	{
@@ -184,8 +185,9 @@
 /* notification stuffz */
 .bell-hold
 {
-	position: absolute;
-	top: 9px;
+	float: left;
+	margin-top: 8px;
+	margin-right: 15px;
 	right: 240px;
 	width: 25px;
 	height: 25px;
